--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -7,7 +7,7 @@ html(lang="ru")
     meta(charset="utf-8")
     title #{title}
     meta(content="odinokun" name="author")
-    meta(content="odinokun start template" name="description")
+    meta(content="constructor" name="description")
     meta(content="" name="keywords")
     meta(content="width=device-width, initial-scale=1" name="viewport")
     meta(content="ie=edge" http-equiv="x-ua-compatible")
