--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -15,6 +15,8 @@
 //section
 @import 'sections/footer';
 @import 'sections/header';
+@import 'sections/sec-6-before';
+@import 'sections/sec-6';
 
 //pages
 @import 'pages/index';
