--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,19 +1,17 @@
 extends ../_template
 
 block variables
-  - var title = 'Lets Go'
+  - var title = 'Proshift contructor'
 
 block content
-  include ../sections/header
+  //- include ../sections/header
   
   //begin content
   section.main
-    .section#four(style="min-height:100vh; background-color:#bada55; padding-top: 00px;")
-      .container
-    .section#two(style="min-height:100vh; background-color:#639;")
-    .section#three(style="min-height:100vh; background-color:#c0ffee;")
-    .section#one(style="min-height:100vh; background-color:#369;")
+    include ../sections/sec-6-before
+    include ../sections/sec-6
+
   //end   content
 
-  include ../elements/popup
+  //- include ../elements/popup
   include ../sections/footer
