--- a/src/style/core/_base.scss
+++ b/src/style/core/_base.scss
@@ -137,19 +137,35 @@ svg {
 .container {
   position: relative;
   width: 100%;
-  max-width: 1200px;
+  max-width: 980px;
   margin: 0 auto;
-  padding: 15px 30px;
-
-  @include max(768) {
-    padding: 10px 20px;
-  }
-  @include max(425) {
-    padding: 10px;
-  }
+  padding: 0 10px;
 }
 .header,
 .page-header,
 .footer {
   flex: 0 0 auto;
+}
+.btn-lg,
+.btn-sm {
+  font-family: $font-bold;
+  line-height: 1;
+  transition: .5s;
+  white-space: nowrap;
+  text-transform: uppercase;
+  color: #fff;
+  border: none;
+  background-color: $highlight;
+  &:hover {
+    color: $title;
+    background-color: #27cbf4;
+  }
+}
+.btn-lg {
+  font-size: 16px;
+  padding: 15px 30px;
+}
+.btn-sm {
+  font-size: 18px;
+  padding: 8px 30px;
 }
