--- a/src/style/sections/_footer.scss
+++ b/src/style/sections/_footer.scss
@@ -1,1 +1,9 @@
-
+.footer {
+  padding: 18px 10px;
+  text-align: center;
+  span {
+    font-family: $font-semibold;
+    font-size: 12px;
+    color:$title;
+  }
+}
