--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -15,6 +15,7 @@
 //section
 @import 'sections/footer';
 @import 'sections/header';
+@import 'sections/sec-04';
 @import 'sections/sec-05';
 @import 'sections/sec-06-before';
 @import 'sections/sec-06';
