--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -8,6 +8,7 @@ block content
   
   //begin content
   section.main
+    include ../sections/sec-02
     include ../sections/sec-03
     include ../sections/sec-04
     include ../sections/sec-05
