--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -6,6 +6,7 @@
 
 //elements
 // @import 'elements/breadcrumbs';
+@import 'elements/solar-system';
 // @import 'elements/burger';
 // @import 'elements/pagination';
 // @import 'elements/popup';
@@ -15,12 +16,16 @@
 //section
 @import 'sections/footer';
 @import 'sections/header';
+@import 'sections/sec-01';
 @import 'sections/sec-02';
 @import 'sections/sec-03';
 @import 'sections/sec-04';
 @import 'sections/sec-05';
 @import 'sections/sec-06-before';
 @import 'sections/sec-06';
+@import 'sections/sec-07';
+@import 'sections/sec-08-before';
+@import 'sections/sec-08';
 
 //pages
 @import 'pages/index';
