--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -4,16 +4,20 @@ block variables
   - var title = 'Proshift contructor'
 
 block content
-  //- include ../sections/header
   
   //begin content
   section.main
+    include ../sections/header
+    include ../sections/sec-01
     include ../sections/sec-02
     include ../sections/sec-03
     include ../sections/sec-04
     include ../sections/sec-05
     include ../sections/sec-06-before
     include ../sections/sec-06
+    include ../sections/sec-07
+    include ../sections/sec-08-before
+    include ../sections/sec-08
 
   //end   content
 
