--- a/src/pug/sections/sec-06.pug
+++ b/src/pug/sections/sec-06.pug
@@ -1,5 +1,5 @@
 //begin sec-06
-section.sec-06
+section.sec-06(style="background-image: url('assets/img/bg-space.jpg');")
   .container
     h2.sec-06__title
       |Мобильную версию сайта
