--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -26,6 +26,7 @@
 @import 'sections/sec-07';
 @import 'sections/sec-08-before';
 @import 'sections/sec-08';
+@import 'sections/sec-09';
 
 //pages
 @import 'pages/index';
