--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -18,6 +18,7 @@ block content
     include ../sections/sec-07
     include ../sections/sec-08-before
     include ../sections/sec-08
+    include ../sections/sec-09
 
   //end   content
 
