--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -19,6 +19,7 @@ block content
     include ../sections/sec-08-before
     include ../sections/sec-08
     include ../sections/sec-09
+    include ../sections/sec-10
 
   //end   content
 
