--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -27,6 +27,7 @@
 @import 'sections/sec-08-before';
 @import 'sections/sec-08';
 @import 'sections/sec-09';
+@import 'sections/sec-10';
 
 //pages
 @import 'pages/index';
