--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -20,6 +20,8 @@ block content
     include ../sections/sec-08
     include ../sections/sec-09
     include ../sections/sec-10
+    include ../sections/sec-11
+    include ../sections/sec-12
 
   //end   content
 
