--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -28,6 +28,8 @@
 @import 'sections/sec-08';
 @import 'sections/sec-09';
 @import 'sections/sec-10';
+@import 'sections/sec-11';
+@import 'sections/sec-12';
 
 //pages
 @import 'pages/index';
