--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -30,6 +30,7 @@
 @import 'sections/sec-10';
 @import 'sections/sec-11';
 @import 'sections/sec-12';
+@import 'sections/sec-13';
 
 //pages
 @import 'pages/index';
