--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -22,6 +22,7 @@ block content
     include ../sections/sec-10
     include ../sections/sec-11
     include ../sections/sec-12
+    include ../sections/sec-13
 
   //end   content
 
