--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -9,20 +9,20 @@ block content
   section.main
     include ../sections/header
     include ../sections/sec-01
-    include ../sections/sec-02
-    include ../sections/sec-03
-    include ../sections/sec-04
-    include ../sections/sec-05
-    include ../sections/sec-06-before
-    include ../sections/sec-06
-    include ../sections/sec-07
-    include ../sections/sec-08-before
-    include ../sections/sec-08
-    include ../sections/sec-09
-    include ../sections/sec-10
-    include ../sections/sec-11
-    include ../sections/sec-12
-    include ../sections/sec-13
+    //- include ../sections/sec-02
+    //- include ../sections/sec-03
+    //- include ../sections/sec-04
+    //- include ../sections/sec-05
+    //- include ../sections/sec-06-before
+    //- include ../sections/sec-06
+    //- include ../sections/sec-07
+    //- include ../sections/sec-08-before
+    //- include ../sections/sec-08
+    //- include ../sections/sec-09
+    //- include ../sections/sec-10
+    //- include ../sections/sec-11
+    //- include ../sections/sec-12
+    //- include ../sections/sec-13
 
   //end   content
 
