--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -9,7 +9,7 @@ block content
   section.main
     include ../sections/header
     include ../sections/sec-01
-    //- include ../sections/sec-02
+    include ../sections/sec-02
     //- include ../sections/sec-03
     //- include ../sections/sec-04
     //- include ../sections/sec-05
