сделал адаптацию section-03&04

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -10,8 +10,8 @@ block content
     include ../sections/header
     include ../sections/sec-01
     include ../sections/sec-02
-    //- include ../sections/sec-03
-    //- include ../sections/sec-04
+    include ../sections/sec-03
+    include ../sections/sec-04
     //- include ../sections/sec-05
     //- include ../sections/sec-06-before
     //- include ../sections/sec-06
