--- a/src/style/sections/_sec-03.scss
+++ b/src/style/sections/_sec-03.scss
@@ -16,16 +16,28 @@
   font-size: 60px;
   margin-bottom: 0;
   letter-spacing: .3;
+
+  @include max(680) {
+    font-size: 40px;
+  }
 }
 .sec-03__title-02 {
   font-family: $font-extrabold;
   font-size: 48px;
   margin-bottom: 5px;
+
+  @include max(680) {
+    font-size: 30px;
+  }
 }
 .sec-03__title-03 {
   font-family: $font-extrabold;
   font-size: 41px;
   margin-bottom: 10px;
+
+  @include max(680) {
+    font-size: 26px;
+  }
 }
 .sec-03__title-04 {
   font-family: $font-black;
@@ -33,6 +45,15 @@
   position: relative;
   display: inline-block;
   margin-bottom: 20px;
+
+  @include max(680) {
+    font-size: 70px;
+    line-height: 100px;
+  }
+  @include max(490) {
+    font-size: 66px;
+    line-height: 1;
+  }
   &::before,
   &::after {
     position: absolute;
@@ -40,6 +61,10 @@
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: contain;
+
+    @include max(490) {
+      display: none;
+    }
   }
   &::before {
     top: 0;
