сделал адаптацию section-05

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -12,7 +12,7 @@ block content
     include ../sections/sec-02
     include ../sections/sec-03
     include ../sections/sec-04
-    //- include ../sections/sec-05
+    include ../sections/sec-05
     //- include ../sections/sec-06-before
     //- include ../sections/sec-06
     //- include ../sections/sec-07
