--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -13,8 +13,8 @@ block content
     include ../sections/sec-03
     include ../sections/sec-04
     include ../sections/sec-05
-    //- include ../sections/sec-06-before
-    //- include ../sections/sec-06
+    include ../sections/sec-06-before
+    include ../sections/sec-06
     //- include ../sections/sec-07
     //- include ../sections/sec-08-before
     //- include ../sections/sec-08
