--- a/src/style/sections/_sec-06-before.scss
+++ b/src/style/sections/_sec-06-before.scss
@@ -14,6 +14,9 @@
   font-size: 30px;
   letter-spacing: 0.3;
   margin-bottom: 20px;
+  @include max(680) {
+    font-size: 24px;
+  }
 }
 .sec-06-before__subtitle {
   line-height: 1;
@@ -23,4 +26,7 @@
   font-size: 18px;
   letter-spacing: 0.18;
   margin-bottom: 0;
+  @include max(680) {
+    font-size: 16px;
+  }
 }
