сделал адаптацию section-07

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -15,7 +15,7 @@ block content
     include ../sections/sec-05
     include ../sections/sec-06-before
     include ../sections/sec-06
-    //- include ../sections/sec-07
+    include ../sections/sec-07
     //- include ../sections/sec-08-before
     //- include ../sections/sec-08
     //- include ../sections/sec-09
