сделал адаптацию section-08

--- a/src/pug/sections/sec-07.pug
+++ b/src/pug/sections/sec-07.pug
@@ -12,7 +12,7 @@ section.sec-07
           p С обновленным сайтом количество лояльных заказчиков увеличилось на 300%. Эффективность контекстной рекламы увеличилась на 400%
           a(href="#").sec-07__item-link r-service.ru
       .sec-07__item-pic
-        .sec-07__item-pic-project(style="background-image: url('assets/img/project-01.jpg')")
+        //- .sec-07__item-pic-project(style="background-image: url('assets/img/project-01.jpg')")
         img(src="assets/img/mac.png", alt="macbook")
           
     .sec-07__item
@@ -24,7 +24,7 @@ section.sec-07
           p С обновленным сайтом количество лояльных заказчиков увеличилось на 300%. Эффективность контекстной рекламы увеличилась на 400%
           a(href="#").sec-07__item-link r-service.ru
       .sec-07__item-pic
-        .sec-07__item-pic-project(style="background-image: url('assets/img/project-01.jpg')")
+        //- .sec-07__item-pic-project(style="background-image: url('assets/img/project-01.jpg')")
         img(src="assets/img/mac.png", alt="macbook")
 
 
