--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -16,8 +16,8 @@ block content
     include ../sections/sec-06-before
     include ../sections/sec-06
     include ../sections/sec-07
-    //- include ../sections/sec-08-before
-    //- include ../sections/sec-08
+    include ../sections/sec-08-before
+    include ../sections/sec-08
     //- include ../sections/sec-09
     //- include ../sections/sec-10
     //- include ../sections/sec-11
