сделал адаптацию section-09

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -18,7 +18,7 @@ block content
     include ../sections/sec-07
     include ../sections/sec-08-before
     include ../sections/sec-08
-    //- include ../sections/sec-09
+    include ../sections/sec-09
     //- include ../sections/sec-10
     //- include ../sections/sec-11
     //- include ../sections/sec-12
