--- a/src/style/sections/_sec-10.scss
+++ b/src/style/sections/_sec-10.scss
@@ -17,6 +17,10 @@
   font-family: $font-bold;
   font-size: 30px;
   margin-bottom: 20px;
+
+  @include max(680) {
+    font-size: 24px;
+  }
   span {
     color: $highlight;
   }
@@ -25,6 +29,10 @@
   font-family: $font-semibold;
   font-size: 16px;
   margin-bottom: 20px;
+
+  @include max(680) {
+    font-size: 14px;
+  }
 }
 .sec-10__body {
   position: relative;
@@ -33,6 +41,13 @@
   justify-content: center;
   min-height: 500px;
   padding-left: 300px;
+
+  @include max(880) {
+    padding-left: 250px;
+  }
+  @include max(730) {
+    padding-left: 0;
+  }
   &::before {
     position: absolute;
     top: 0;
@@ -46,6 +61,10 @@
     background-repeat: no-repeat;
     background-position: 0 50%;
     background-size: contain;
+
+    @include max(730) {
+      display: none;
+    }
   }
 }
 .sec-10__body-list {
@@ -62,6 +81,10 @@
       font-family: $font-bold;
       font-size: 18px;
       text-transform: uppercase;
+
+      @include max(680) {
+        font-size: 16px;
+      }
     }
     &:nth-child(1)::before {
       background-image: url('../img/icons/sec-10-01.png');
@@ -89,27 +112,55 @@
   height: 150px;
   background-image: url('../img/sec-10-callme.png');
   background-repeat: no-repeat;
-  background-position: 50% 0%;
+  background-position: 50% 0;
   background-size: contain;
+
+  @include max(730) {
+    margin: 0 auto;
+  }
+  @include max(540) {
+    width: 100%;
+    height: auto;
+    background-image: none;
+  }
+}
+.sec-10__callme-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+
+  @include max(540) {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 }
 .sec-10__callme-title {
   font-family: $font-bold;
   font-size: 24px;
   text-transform: uppercase;
   color: $brand;
-}
-.sec-10__callme-header {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
+
+  @include max(540) {
+    display: block;
+    width: 100%;
+    margin: 0;
+    text-align: center;
+  }
 }
 .sec-10__callme-phone {
-  text-align: right;
-    font-family: $font-semibold;
+  font-family: $font-semibold;
   font-size: 30px;
   margin-right: 20px;
+  text-align: right;
   text-transform: uppercase;
   color: $brand;
+
+  @include max(540) {
+    display: block;
+    // margin-bottom: 20px;
+    margin: 0 0 10px 0;
+    text-align: center;
+  }
 }
 .sec-10__callme-footer {
   font-family: $font-bold;
@@ -118,4 +169,9 @@
   text-align: center;
   text-transform: uppercase;
   color: $brand;
+
+  @include max(680) {
+    font-size: 16px;
+    display: block;
+  }
 }
