сделал адаптацию section-12

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -21,7 +21,7 @@ block content
     include ../sections/sec-09
     include ../sections/sec-10
     include ../sections/sec-11
-    //- include ../sections/sec-12
+    include ../sections/sec-12
     //- include ../sections/sec-13
 
   //end   content
