--- a/src/pug/sections/header.pug
+++ b/src/pug/sections/header.pug
@@ -10,7 +10,7 @@ header#header.header
       .header__adress-phone
         a(href='tel:+7 (812) 309-29-98') +7 (812) 309-29-98
     .header__btn
-      button.header__btn-link
+      button.header__btn-link.popup-open
         | Оставить заявку
 
 // end   header
