--- a/src/pug/sections/sec-02.pug
+++ b/src/pug/sections/sec-02.pug
@@ -6,7 +6,7 @@ section.sec-02#sec-02
     form.sec-02__form
       input(type="text" name="name" placeholder="Ваше имя")
       input(type="text" name="phone" placeholder="Телефон")
-      input(type="submit" value="начать бесплатно").btn-sm
+      input(type="submit" value="начать бесплатно").btn-sm.popup-send
 
     h2.sec-02__title А также...
     .sec-02__banner-wrap
@@ -25,5 +25,5 @@ section.sec-02#sec-02
 
 
     h2.sec-02__title-lg Только этим летом
-    button.btn-sm хочу 7000р.!!!
+    button.btn-sm.popup-open хочу 7000р.!!!
 //end   sec-02
