--- a/src/pug/sections/sec-06.pug
+++ b/src/pug/sections/sec-06.pug
@@ -4,5 +4,5 @@ section.sec-06(style="background-image: url('assets/img/bg-space.jpg');")
     h2.sec-06__title
       |Мобильную версию сайта
       span в подарок
-    button.btn-sm.sec-06__btn Получить
+    button.btn-sm.sec-06__btn.popup-open Получить
 //end   sec-06
