--- a/src/pug/sections/sec-08.pug
+++ b/src/pug/sections/sec-08.pug
@@ -31,7 +31,7 @@ section.sec-08(style="background-image: url('assets/img/bg-space.jpg');")
 
     .sec-08__slogan
       h3.sec-08__slogan-title Начните завоевывать космос интернета прямо сейчас
-      button.btn-sm.sec-08__btn Начать!
+      button.btn-sm.sec-08__btn.popup-open Начать!
       .sec-08__rocket
         img(src="assets/img/rocket.png", alt="rocket")
 
