--- a/src/pug/sections/sec-09.pug
+++ b/src/pug/sections/sec-09.pug
@@ -14,7 +14,7 @@ section.sec-09
       input(type="text" name="name"   placeholder="Ваше имя")
       input(type="text" name="phone"  placeholder="Телефон")
       input(type="text" name="adress" placeholder="Адрес сайта")
-      input(type="submit" value="Получить аудит").btn-sm
+      input(type="submit" value="Получить аудит").btn-sm.popup-send
 
           
 //end   sec-09
