--- a/src/pug/sections/sec-11.pug
+++ b/src/pug/sections/sec-11.pug
@@ -33,7 +33,7 @@ section.sec-11(style="background-image: url('assets/img/bg-space.jpg');")
     form.sec-11__form
       input(type="text" name="name" placeholder="Ваше имя")
       input(type="text" name="phone" placeholder="Телефон")
-      input(type="submit" value="хочу аудит!").btn-sm
+      input(type="submit" value="хочу аудит!").btn-sm.popup-send
 
 
           
