--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -9,7 +9,7 @@
 @import 'elements/solar-system';
 // @import 'elements/burger';
 // @import 'elements/pagination';
-// @import 'elements/popup';
+@import 'elements/popup';
 // @import 'elements/slickBase';
 // @import 'elements/stickyHeader';
 
