--- a/src/style/sections/_sec-02.scss
+++ b/src/style/sections/_sec-02.scss
@@ -43,11 +43,12 @@
   }
   input {
     font-size: 14px;
-    width: 100%;
+    width: 30%;
     max-width: 230px;
     margin-bottom: 20px;
     border: 1px solid $text;
     outline: none;
+    white-space: nowrap;
 
     @include placeholder-color($text);
     @include max(730) {
